# caf-proto-serialization

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCAF.cmake  ProtoCAF.cmake
src/: CMakeLists.txt  main.cpp  otherTest.h  test.proto
src/actors/: Inspect.hpp  actors.h
src/modules/actor-framework/libcaf_core/caf/detail/: build_config.hpp
